--- a/static/css/home.css
+++ b/static/css/home.css
@@ -49,7 +49,7 @@
 
 .hero__content {
     position: relative;
-    z-index: 0;
+    z-index: 1;
     max-width: 900px;
     padding: 0 2rem;
 }
@@ -230,7 +230,7 @@
 
 .capacity__content {
     position: relative;
-    z-index: 0;
+    z-index: 1;
     max-width: 1200px;
     padding: 0 2rem;
     text-align: center;
